[package]
name = "adsb"
version = "0.2.4"
description = "ADS-B/Mode-S parser"
authors = ["António Marques <me@antoniomarques.eu>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/asmarques/adsb"
readme = "README.md"
keywords = ["adsb", "flight", "aircraft"]
categories = ["encoding", "parser-implementations"]
edition = "2018"

[dependencies]
nom = "6"
lazy_static = "1.4.0"

[dev-dependencies]
assert_approx_eq = "1.1"
criterion = "0.3"
structopt = "0.2.10"

[lib]
bench = false

[[bench]]
name = "parser"
harness = false