[package]
name = "adsb"
version = "0.3.0"
description = "ADS-B/Mode-S parser"
authors = ["António Marques <me@antoniomarques.eu>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/asmarques/adsb"
readme = "README.md"
keywords = ["adsb", "flight", "aircraft"]
categories = ["encoding", "parser-implementations"]
edition = "2018"

[dependencies]
nom = "7"
lazy_static = "1.4.0"

[dev-dependencies]
assert_approx_eq = "1.1"
criterion = "0.4"
clap = { version = "4", features = ["derive"] }

[lib]
bench = false

[[bench]]
name = "parser"
harness = false